src/index.css
@import url('https://fonts.googleapis.com/css?family=Solway&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
}

body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background-color: #3a3535;
}

.app_header {
    text-align: center;
    font-family: 'Solway', serif;
    font-size: 1.5em;
    font-weight: 600;
    padding: 0.5em;
    border-bottom: 1px solid #666;
    background-color: #ff7315;
}

/* Navbar component */

.navbar ul  {
    margin: 0 1.5em;
    display: flex;
    justify-content: center;
    border-bottom: 1px solid #ddd;
}

.navbar li {
    padding: 0.5em 0.5em;
}

.navbar a {
    color: #00bfff;
} 

.navbar a.active {
    color: #ff4000;
}

/* Org component */

.org {
    margin-top: 1em;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

/* Budget component */

.budget {
    display: flex;
    width: 100%;
    background-color: #f4f4f4;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin-bottom: 1em;
    padding: 1em;
}

.budget_form {
    padding: 8px;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}

#budget {
    width: 40%;
    border-radius: 10px;
    border: 1px solid #00bfff;
    transition: border 0.3s ease-in;
}

#budget:focus {
    outline: none;
    border: 1px solid #ff4000;
}

.budget_h2 {
    padding: 8px;
}

/* AddItem component */

.addItem_form {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 1em;
    padding: 1em;
    background-color: #f4f4f4;
}

.addItem_form h2 {
    width: 50%;
    text-align: center;
    color: #00bfff;
    padding: 0.5em;
    background-color: #3a3535;
    border-radius: 15px;
    margin-bottom: 1em;
}

.addItem_inputs {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 10px 0;
    margin: 1em;
    position: relative;
}

.addItem_inputs input {
    border-radius: 15px;
    border: 1px solid #00bfff;
}

.addItem_form input[type='submit'] {
    width: 20%;
    background-color: #00bfff;
    padding: 0.5em;
    border: 1px solid #00bfff;
    border-radius: 10px;
    font-size: 1em;
    font-weight: 600;
}

/* output */

.output-wrap {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

/* TotalCount component */

.total {
    position: sticky;
    top: 0;
    width: 100%;
    margin-bottom: 1em;
    padding: 1em;
    background-color: #f4f4f4;
    display: flex;
    justify-content: space-around;
}

/* Display component*/

.display_empty {
    max-width: 100%;
    text-align: center;
    padding: 1em;
    margin: 0.5em;
    background-color: #f4f4f4;
}

.display-items {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 90%;
    margin: 0 auto;
}

.display_item {
    background-color: #f4f4f4;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items:center;
    padding: 1em;
    margin: 0.5em;
    border-radius: 10px;
}

.item_name {
    width: 30%;
    text-align: center;
}

.item_btns { 
    width: 30%;
    display: flex;
    justify-content: space-evenly; 
}

.item_btns button {
    padding: 0.5em;
    border-radius: 15px;
    border: 1px solid #00bfff;
    background-color: #fff;
}

